feat: refactor post